# zgen

./: .clang-format  .clangd  .gdb_history  .gitignore  CMakeLists.txt  Makefile  xmake.lua
libs/dex/include/Ui/: GridLength.h  Thickness.h  UiElement.h  UiTypes.h
libs/sdk-cli/: canvas.h  style.h
libs/sdk-conf/: base.h
libs/sdk-conf/json/: types.h
libs/sdk-conf/toml/: types.h
libs/sdk-crypto/: crc32.cpp  mod.cpp  types.h
libs/sdk-graph/: brush.h  canvas.h  format.h
libs/sdk-io/: buf.cppm  buf.h  file.h  mod.cppm  path.cppm  path.h  seek.cppm  seek.h  std.h  text.cppm  text.h  traits.cppm  traits.h  url.cppm  url.h
libs/sdk-logs/: logger.h
libs/sdk-math/: const.h  funcs.h  gen.h  misc.h  simd.h  vec.h
libs/sdk-meta/: _embed.h  _macros.h  array.cppm  array.h  atomic.cppm  atomic.h  bits.h  box.cppm  box.h  buf.h  callable.h  cond.cppm  cond.h  cursor.cppm  cursor.h  debug.h  decl.cppm  decl.h  defer.cppm  defer.h  dict.h  endian.cppm  endian.h  error.cppm  error.h  flags.h  float.cppm  float.h  hash.cppm  hash.h  hashmap.h  id.cppm  id.h  index.h  iter.cppm  iter.h  limits.cppm  limits.h  list.h  literals.cppm  (+45 more)
libs/sdk-meta/templated/: bits.cppm  buf.cppm  dict.cppm  flags.cppm  list.cppm  queue.cppm  range.cppm  ranges.cppm  vec.cppm
libs/sdk-net/: addr.h
libs/sdk-patterns/: builder.h
libs/sdk-terminal/: canvas.h  core.h  style.h  view.h
libs/sdk-terminal/drawing/: attribute.h  cell.h  color.ansi.h  color.format.h  color.h
libs/sdk-terminal/drawing/canvas/: linestyle.h
libs/sdk-terminal/views/: effect.h  thickness.h  view.h
libs/sdk-text/: _defs.h  builder.h  fmt.h  format.h  mod.cppm  parse.cppm  parse.h  rune.cppm  rune.h  runes.cppm  runes.h  str.h  string.cppm  style.h  traits.cppm  traits.h
libs/sdk-text/fmt/: align.h  base.cppm  base.h  case.h  elem.h  enum.h  misc.h  mod.cppm  nums.h  ref.h  str.h  type.align.cppm  type.case.cppm  type.meta.cppm  type.numbers.cppm  type.reference.cppm  type.string.cppm
modules/ext2/: spec.h
scripts/: config.conf  dockerfile  install_llvm+clang.sh
specs/: limine.h  multiboot2.h
specs/acpi/: acpi_device.cpp  acpi_timer_device.cpp  bus.h  device.h  tables.h
specs/boot/: builder.h  info.h  record.h
specs/boot/protos/: limine.cppm  multiboot2.h  stivale2.h
specs/pci/: bus.h  bus_device.cpp  dev.cpp  dev.h  device.h  info.h  spec.h
specs/stor/: gpt.h  mbr.h
specs/stor/ahci/: spec.h
specs/stor/ide/: spec.h
specs/usb/: class.h
src/arch/x86_64/: _symbols.cpp  apic.h  apic_device.cpp  apic_io.cpp  apic_local.cpp  apic_timer_device.cpp  arch.cpp  com.h  cpu.h  cpuid.h  gdt.h  gdt.s  header.multiboot2.s  idt.h  idt.s  init.cpp  io.cpp  kinit.limine.cpp  kinit.multiboot2.cpp  pic.h  regs.h  smp_trampoline.s  vmm.cpp  vmm.h
src/include/: limine.h
src/include/arch/x86_64/: apic.h  com.h  cpu.h  cpuid.h  gdt.h  idt.h  idt.s  regs.h  simd.h  vmm.h
src/include/neodymium/: core.h  time.h
src/include/neodymium/fs/: filesystem.h
src/include/neodymium/hal/: io.h  kmm.h  pmm.h  vmm.h
src/include/neodymium/init/: boot.h  prekernel.h
src/include/neodymium/io/: device.h  file.h  fs.ext2.h  fs.h  fs.ramfs.h  node.h  vfs.h
src/include/neodymium/mm/: buf.h  mem.h  pmm.bits.h  pmm.buddy.h
src/include/neodymium/tasks/: proc.h
src/include/specs/acpi/: acpi_device.cpp  acpi_timer_device.cpp  device.h  tables.h
src/include/specs/pci/: device.h  info.h
src/io/: file.cpp
src/kernel/: kinit.limine.cpp  main.cpp
src/misc/: __cxxabi.cpp  __cxxnew.cpp
src/mm/: mem.cpp  pmm.bits.cpp
src/realms/core/: api.io.h  api.time.h  main.cpp  main.h  mod.h  panic.cpp  registry.h
src/realms/hal/: arch.h  event.h  io.h  kmm.h  pmm.h  smp.h  vmm.h
src/realms/init/: boot.h  prekernel.h
src/realms/io/: bus.h  dev.h  dev.stor.h  devtree.cpp  devtree.h  drv.h  file.cpp  file.h  fs.ext2.h  fs.h  fs.ramfs.h  vfs.h  volume.h
src/realms/mm/: buffer.h  kmm.cppm  kmm.inc.cpp  kmm.inc.h  kmm.slub.cpp  kmm.slub.h  mem.cpp  mem.h  pmm.bits.cpp  pmm.bits.h  pmm.buddy.cpp  pmm.buddy.h  slab.h
src/realms/tasks/: async.h  future.h  proc.h  sched.cpp  sched.h
src/zgen/core/: api.io.h  api.time.h  main.cpp
src/zgen/hal/: arch.h  event.h  intr.h  io.h  kmm.h  pmm.h  smp.h  vma.h  vmm.h
src/zgen/init/: boot.h  kinit.limine.cpp  prekernel.h
src/zgen/io/: dev.h  dev.stor.h  dev.storage.h  device.h  file.cpp  file.h  fs.ext2.h  fs.h  fs.ramfs.h  vfs.h  volume.h
src/zgen/mm/: buffer.h  kmm.inc.cpp  kmm.inc.h  kmm.slub.cpp  kmm.slub.h  mem.cpp  mem.h  pmm.bits.cpp  pmm.bits.h  pmm.buddy.cpp  pmm.buddy.h  slab.h
src/zgen/tasks/: async.h  future.h  proc.h  sched.cpp  sched.h
